--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-PyQt6==6.7.1
-replicate==0.31.0
+replicate==0.32.0
 python-dotenv==1.0.1
 token_count==0.2.1
 pillow==10.4.0
+loguru==0.7.2
+nicegui==1.4.36
+httpx
