feat: update Docker Compose configuration
Update the Docker Compose configuration to use a specific image tag for the `flux-replicate-gui` service. This ensures the application is deployed with a consistent and versioned Docker image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   flux-replicate-gui:
-    image: ghcr.io/rtuszik:
+    image: ghcr.io/rtuszik/flux-dev-lora-python:main
     container_name: flux-replicate-gui
     environment:
       - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
