--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 
 services:
-  flux-replicate-gui:
-    image: ghcr.io/rtuszik/flux-dev-lora-python:main
-    container_name: flux-replicate-gui
+  replicate-flux-lora:
+    image: ghcr.io/rtuszik/replicate-flux-lora
+    container_name: replicate-flux-lora
     environment:
       - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
     ports:
