--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 
 services:
   replicate-flux-lora:
-    image: ghcr.io/rtuszik/replicate-flux-lora
+    image: ghcr.io/rtuszik/replicate-flux-lora:latest
     container_name: replicate-flux-lora
     environment:
       - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
