refactor: use env_file for Docker environment vars
Update README.md and docker-compose.yml to use env_file instead of
inline environment variables. This improves security and
configuration management by centralizing environment variables in
a separate .env file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   replicate-flux-lora:
     image: ghcr.io/rtuszik/replicate-flux-lora:latest
     container_name: replicate-flux-lora
-    environment:
-      - REPLICATE_API_TOKEN=${REPLICATE_API_TOKEN}
+    env_file: .env
     ports:
       - "8080:8080"
     volumes:
