--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,6 +1,7 @@
 name: Docker Build and Push
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -40,7 +41,6 @@ jobs:
           type=sha,prefix={{branch}}-
           type=ref,event=branch
 
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
@@ -48,4 +48,3 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-
