feat(ci): add release trigger to Docker workflow
- Change trigger from `push` to `release` with `released` event type to only run on published releases

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,12 +2,9 @@ name: Docker Build and Push
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - src/**
-      - Dockerfile
+  release:
+    types:
+      - released
 
 env:
   REGISTRY: ghcr.io
