--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -35,8 +35,8 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
           type=raw,value=latest
-          type=sha,prefix={{branch}}-
-          type=ref,event=branch
+          type=sha,prefix=sha-
+          type=ref,event=branch,pattern={{branch}},prefix=branch-,sanitize=true
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
