Enhance Config Handling, UI/UX and CI (#8)
* ci: remove Docker layer caching in GitHub Actions

Remove the cache-from and cache-to options from the docker/build-push-action
step in the Docker build and push workflow. 

* refactor(gui): improve layout and responsiveness

- Restructure main UI layout using grid system
- Adjust card sizes and add scrolling for better space utilization
- Increase spinner size for better visibility

* refactor(config): migrate to dynaconf for settings

- Replace JSON-based settings with dynaconf
- Update GUI to use new config system
- Add settings.toml for default configuration
- Modify user model handling in GUI

* feat(ci): add release trigger to Docker workflow

- Change trigger from `push` to `release` with `released` event type to only run on published releases

* refactor(settings): improve config management

- Move settings.toml to root directory
- Implement local settings override with settings.local.toml
- Add reset to default functionality in GUI
- Update dependencies in requirements.txt
- Refactor settings handling in ImageGeneratorGUI class

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-replicate==0.32.0
+replicate==0.32.1
 python-dotenv==1.0.1
 token_count==0.2.1
 loguru==0.7.2
-nicegui==1.4.36
-httpx==0.27.0
+nicegui==1.4.37
+httpx==0.27.2
+dynaconf==3.2.6
+toml==0.10.2
