✨ (settings.toml): add default prompt and user-added models configuration
- Add a new `models.user_added` configuration to store user-added models

--- a/settings.toml
+++ b/settings.toml
@@ -13,6 +13,7 @@ height = 1024
 seed = -1
 output_folder = ""
 replicate_model = ""
-prompt = ""
+prompt = "Enter Prompt here..."
 
-[user_models]
+[models]
+user_added = []
