refactor(config): improve settings management and logging
- Enhance config.py with better type handling and error logging
- Update GUI to use new config methods and add more debug logging
- Improve docker-compose.yml with named volume for settings
- Adjust main.py and replicate_api.py logging configuration
- Update .gitignore for user-specific settings file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,9 @@ services:
       - "8080:8080"
     volumes:
       - ${HOST_OUTPUT_DIR}:/app/output
+      - replicate-flux-lora-settings:/app/settings
     restart: unless-stopped
+
+
+volumes:
+  replicate-flux-lora-settings:
