--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ num_outputs = 1
 lora_scale = 1
 num_inference_steps = 28
 guidance_scale = 3.5
-output_format = png
+output_format =
 output_quality = 80
 disable_safety_checker = true
 width = 1024
@@ -14,4 +14,4 @@ seed = -1
 output_folder = /path/to/default/output/folder
 replicate_model =
 models = {"user_added": []}
-
+prompt =
