--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,13 +1,25 @@
 name: Lint
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore: ["main"]
+  pull_request:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions: {}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
 
-    steps:
+    permissions:
+      contents: read
+      packages: read
+      statuses: write
 
+    steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -18,7 +30,7 @@ jobs:
           VALIDATE_HTML: true
           FIX_PYTHON_RUFF: true
           VALIDATE_PYTHON_RUFF: true
-          VALIDATE_MARKDOWN_PRETTIER	: true
+          VALIDATE_MARKDOWN_PRETTIER: true
           VALIDATE_GITLEAKS: true
           VALIDATE_GITHUB_ACTIONS: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
