chore: bump dependencies and upgrade Docker to use uv with optimized caching
- Update NiceGUI from 2.3.0 to 2.21.0 for improved performance and features
- Update python-dotenv (1.0.1 → 1.1.1), loguru (0.7.2 → 0.7.3), httpx (0.27.2 → 0.28.1), dynaconf (3.2.6 → 3.2.11)
- Bump version to 1.3.1 in pyproject.toml
- Modernize Dockerfile to use uv with cache mounts for faster builds
- Remove pinned dependency versions in pyproject.toml for better flexibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "replicate-flux-lora"
-version = "2.0.0"
+version = "1.3.1"
 description = "WebUI for running Flux LoRAs using the Replicate API."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "dynaconf==3.2.6",
-    "httpx==0.27.2",
-    "loguru==0.7.2",
-    "nicegui==2.3.0",
-    "python-dotenv==1.0.1",
-    "replicate==1.0.7",
-    "token-count==0.2.1",
-    "toml==0.10.2",
+    "dynaconf",
+    "httpx",
+    "loguru",
+    "nicegui",
+    "python-dotenv",
+    "replicate",
+    "token-count",
+    "toml",
 ]
