feat: add pillow dependency and update gitignore
- Add pillow>=11.3.0 to dependencies for image processing
- Update .gitignore to exclude claude/, CLAUDE.md, and replicate_outputs/
- Update uv.lock with new dependency changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx",
     "loguru",
     "nicegui",
+    "pillow>=11.3.0",
     "python-dotenv",
     "replicate",
     "token-count",
