--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,22 +1,27 @@
 version: 2
 updates:
-  # Update Python packages
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+    # Update Python packages
+    - package-ecosystem: "pip"
+      directory: "/"
+      target-branch: "develop"
 
-  # Update GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+      schedule:
+          interval: "weekly"
+      open-pull-requests-limit: 10
 
-  # Update Docker base images
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 10
+    # Update GitHub Actions
+    - package-ecosystem: "github-actions"
+      directory: "/"
+      target-branch: "develop"
+
+      schedule:
+          interval: "weekly"
+      open-pull-requests-limit: 10
+
+    # Update Docker base images
+    - package-ecosystem: "docker"
+      target-branch: "develop"
+      directory: "/"
+      schedule:
+          interval: "weekly"
+      open-pull-requests-limit: 10
